[package]
name = "cstylegen"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
repository = "https://github.com/Nerixyz/cstylegen"
keywords = ["cli"]
categories = ["command-line-utilities"]
description = "A CLI to generate c2theme and C++ files."

[dependencies]
ahash = { version = "0.8.3", features = ["serde"] }
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
cssparser = "0.29.6"
serde = { version = "1.0.154", features = ["derive"] }
serde_yaml = "0.9.19"
thiserror = "1.0.38"
