[package]
name = "cstylegen"
version = "0.2.0"
edition = "2021"
license = "GPL-2.0-or-later"
repository = "https://github.com/Nerixyz/cstylegen"
keywords = ["cli"]
categories = ["command-line-utilities"]
description = "A CLI to generate c2theme and C++ files."

[dependencies]
ahash = { version = "0.8.3", features = ["serde"] }
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
cssparser = "0.29.6"
serde = { version = "1.0.154", features = ["derive"] }
serde_yaml = "0.9.19"
thiserror = "1.0.38"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.4"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
installers = ["shell", "powershell"]
